--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_AboutTheEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_AboutTheEmployer.cshtml
@@ -12,7 +12,7 @@
     <div class="grid-wrapper">
         <div class="grid">
             <h3 class="bold-small">Employer</h3>
-            <p id="vacancy-employer-name" class="@(Common.IsValidUrl(Model.NewVacancyViewModel.VacancyOwnerRelationship.EmployerWebsiteUrl) ? "no-btm-margin" : string.Empty)">@Model.NewVacancyViewModel.VacancyOwnerRelationship.Employer.Name</p>
+            <p id="vacancy-employer-name" class="@(Common.IsValidUrl(Model.NewVacancyViewModel.VacancyOwnerRelationship.EmployerWebsiteUrl) ? "no-btm-margin" : string.Empty)">@Model.NewVacancyViewModel.VacancyOwnerRelationship.Employer.FullName</p>
         </div>
         <div class="grid grid-2-3">
             <div class="inner-block-padr">
@@ -49,7 +49,7 @@
                         <a itemprop="url" href="@employerWebsiteUri"
                            id="vacancy-employer-website"
                            target="_blank"
-                           title="@Model.NewVacancyViewModel.VacancyOwnerRelationship.Employer.Name Website" rel="external">@Model.NewVacancyViewModel.VacancyOwnerRelationship.EmployerWebsiteUrl</a>
+                           title="@Model.NewVacancyViewModel.VacancyOwnerRelationship.Employer.FullName Website" rel="external">@Model.NewVacancyViewModel.VacancyOwnerRelationship.EmployerWebsiteUrl</a>
                         @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.NewVacancyViewModel.VacancyOwnerRelationship.EmployerWebsiteUrl, Model.EmployerLink, Model.NewVacancyViewModel.EmployerWebsiteUrlComment))
                     </div>
                 }
