--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ConfirmVacancies.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ConfirmVacancies.cshtml
@@ -41,7 +41,7 @@
                                 @Html.Hidden("VacancyReferenceNumber", viewModel.VacancyReferenceNumber)
                                 <td>@viewModel.ProviderName </td>
                                 <td>@viewModel.ProviderSiteName </td>
-                                @*<td>@viewModel.EmployerName</td>*@
+                                @*<td>@viewModel.FullName</td>*@
                             </tr>
                         }
                     </tbody>
