--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -103,11 +103,11 @@
         }
     </div>
 
-    @if (Model.EmployerResultsPage.ResultsCount > 0)
+    @if (Model.Employers.ResultsCount > 0)
     {
         <section class="clearfix">
             @{
-                var resultsMessage = Model.EmployerResultsPage.ResultsCount > 1 ? string.Format("Found {0} Employers", Model.EmployerResultsPage.ResultsCount) : "Found one employer";
+                var resultsMessage = Model.Employers.ResultsCount > 1 ? string.Format("Found {0} Employers", Model.Employers.ResultsCount) : "Found one employer";
             }
             <h2 class="heading-small">@resultsMessage</h2>
             <div class="grid grid-3-3">
@@ -126,11 +126,11 @@
                             <th>ERN</th>
                             <th></th>
                         </tr>
-                        @foreach (var employerResultsViewModel in @Model.EmployerResultsPage.Page)
+                        @foreach (var employerResultsViewModel in @Model.Employers.Page)
                         {
                             <tr>
                                 <th>
-                                    <h4 class="bold-small">@employerResultsViewModel.EmployerName</h4>
+                                    <h4 class="bold-small">@employerResultsViewModel.FullName</h4>
                                 </th>
                                 <td>
                                     @employerResultsViewModel.Address.AddressLine1
@@ -153,33 +153,33 @@
         <div class="page-navigation">
 
             @{
-                var prevLink = Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new EmployerSearchViewModel(Model).RouteValues) + "&EmployerResultsPage.CurrentPage=" + (Model.EmployerResultsPage.CurrentPage - 1);
-                var nextLink = Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new EmployerSearchViewModel(Model).RouteValues) + "&EmployerResultsPage.CurrentPage=" + (Model.EmployerResultsPage.CurrentPage + 1);
+                var prevLink = Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new EmployerSearchViewModel(Model).RouteValues) + "&Employers.CurrentPage=" + (Model.Employers.CurrentPage - 1);
+                var nextLink = Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new EmployerSearchViewModel(Model).RouteValues) + "&Employers.CurrentPage=" + (Model.Employers.CurrentPage + 1);
             }
 
             <a href="@prevLink"
-               style="visibility: @(Model.EmployerResultsPage.CurrentPage == 1 ? "hidden" : "visible")"
+               style="visibility: @(Model.Employers.CurrentPage == 1 ? "hidden" : "visible")"
                class="page-navigation__btn previous">
                 <i class="arrow-button fa fa-angle-left"></i>
                 <span class="description">Previous <span class="hide-mob">page</span></span>
-                <span class="counter">@(Model.EmployerResultsPage.CurrentPage - 1) of @Model.EmployerResultsPage.TotalNumberOfPages</span>
+                <span class="counter">@(Model.Employers.CurrentPage - 1) of @Model.Employers.TotalNumberOfPages</span>
             </a>
             <a href="@nextLink"
-               style="visibility: @(Model.EmployerResultsPage.CurrentPage == Model.EmployerResultsPage.TotalNumberOfPages ? "hidden" : "visible")"
+               style="visibility: @(Model.Employers.CurrentPage == Model.Employers.TotalNumberOfPages ? "hidden" : "visible")"
                class="page-navigation__btn next">
                 <i class="arrow-button fa fa-angle-right"></i>
                 <span class="description">Next <span class="hide-mob">page</span></span>
-                <span class="counter">@(Model.EmployerResultsPage.CurrentPage + 1) of @Model.EmployerResultsPage.TotalNumberOfPages</span>
+                <span class="counter">@(Model.Employers.CurrentPage + 1) of @Model.Employers.TotalNumberOfPages</span>
             </a>
 
         </div>
         <div class="page-navigation" style="display: none">
 
-            @for (var i = 1; i < Model.EmployerResultsPage.TotalNumberOfPages; i++)
+            @for (var i = 1; i < Model.Employers.TotalNumberOfPages; i++)
             {
-                var pageLink = Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new EmployerSearchViewModel(Model).RouteValues) + "&EmployerResultsPage.CurrentPage=" + (i + 1);
+                var pageLink = Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new EmployerSearchViewModel(Model).RouteValues) + "&Employers.CurrentPage=" + (i + 1);
 
-                <a href="@pageLink" style="font-weight: @(Model.EmployerResultsPage.CurrentPage == i ? "bold" : "normal")">@i</a>
+                <a href="@pageLink" style="font-weight: @(Model.Employers.CurrentPage == i ? "bold" : "normal")">@i</a>
                 <span>&nbsp;</span>
             }
 
