RA-470: Adding employer methods to admin controller

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
@@ -9,4 +9,5 @@
     <li>@Html.RouteLink("Manage Providers", ManagementRouteNames.AdminProviders)</li>
     <li>@Html.RouteLink("Manage Provider Sites", ManagementRouteNames.AdminProviderSites)</li>
     <li>@Html.RouteLink("Manage API Users", ManagementRouteNames.AdminApiUsers)</li>
+    <li>@Html.RouteLink("Manage Employers", ManagementRouteNames.AdminEmployers)</li>
 </ul>
