ra-401: unit tests for wage UI representation. Currently failing

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -50,8 +50,12 @@
         @if (Model.VacancyType == SFA.Apprenticeships.Domain.Entities.Raa.Vacancies.VacancyType.Traineeship)
         {
             @Html.HiddenFor(m => m.Wage.Type)
+            @Html.HiddenFor(m => m.Wage.CustomType)
             @Html.HiddenFor(m => m.Wage.Amount)
+            @Html.HiddenFor(m => m.Wage.AmountLowerBound)
+            @Html.HiddenFor(m => m.Wage.AmountUpperBound)
             @Html.HiddenFor(m => m.Wage.Unit)
+            @Html.HiddenFor(m => m.Wage.WageTypeReason)
             @Html.HiddenFor(m => m.WageComment)
         }
         else
