--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Employers.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Employers.cshtml
@@ -43,6 +43,7 @@
                             <th>Full Name</th>
                             <th>Trading Name</th>
                             <th>Address</th>
+                            <th>Status</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -54,7 +55,16 @@
                                 <td>@employer.EdsUrn</td>
                                 <td>@employer.FullName</td>
                                 <td>@employer.TradingName</td>
-                                <td>@employer.Address</td>
+                                <td>
+                                    @employer.Address.AddressLine1
+                                    @if (!string.IsNullOrWhiteSpace(@employer.Address.AddressLine2))
+                                    {
+                                        <br />@employer.Address.AddressLine2
+
+                                    }
+                                    <br />@employer.Address.Town @employer.Address.Postcode
+                                </td>
+                                <td>@employer.Status</td>
                                 <td>@Html.RouteLink("View", ManagementRouteNames.AdminViewEmployer, new { employer.EmployerId })</td>
                             </tr>
                         }
