--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmBulkUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmBulkUnsuccessfulDecision.cshtml
@@ -8,30 +8,39 @@
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmBulkUnsuccessfulApprenticeshipApplication, FormMethod.Post))
 {
+    @Html.HiddenFor(m => m.VacancyReferenceNumber)
+    @Html.HiddenFor(m=>m.ApplicationIds)
     <div>
         <h1 class="heading-xlarge med-btm-margin">Make selected candidates unsuccessful</h1>
-        <div class="hgroup grey-background">            
+        <div class="inner-block hgroup grey-background">
+            <br/>
             <ul>
                 @foreach (var application in Model.BulkRejectApplications)
                 {
-                    @Html.Hidden("bulkRejectApplications", application.ApplicationId)
+                    @*@Html.Hidden("ApplicationIds", application.ApplicationId)*@
                     <li>@application.FirstName @application.LastName</li>
                 }
             </ul>
+            <br/>
             @Html.RouteLink("Edit list", RecruitmentRouteNames.BulkDeclineCandidates, new {vacancyReferenceNumber = @Model.VacancyReferenceNumber})
         </div>
         <h2 class="heading-medium">Candidate feedback</h2>
+        <p>
+            When contacting the candidates to inform them that they have been <b>unsuccessful</b> you will need to provide feedback
+            on their application, and/or a reason why they have not been selected for the role of <b>@Model.VacancyTitle</b>
+        </p>
+        <h2 class="bold-small">What feedback would you like to share with these candidates?</h2>
         @Html.FormTextAreaFor(
             m => m.UnSuccessfulReason,
-            containerHtmlAttributes: new {@class = "form-group-compound heading-small"},
-            controlHtmlAttributes: new {@class = "form-control form-textarea-medium", type = "text", autofocus = "autofocus", spellcheck = "true"})
+            containerHtmlAttributes: new { @class = "form-group-compound heading-small" },
+            controlHtmlAttributes: new { @class = "form-control form-textarea-medium", type = "text", autofocus = "autofocus", spellcheck = "true" })
         <section>
             <div class="form-group">
-                <br/>
-                <button type="submit" class="button" name="SendUnsuccessfulDecision" value="SendUnsuccessfulDecision">
+                <br />
+                <button type="submit" class="button" name="SendBulkUnsuccessfulDecision" value="SendBulkUnsuccessfulDecision">
                     Send feedback
                 </button>
-                @Html.RouteLink("Cancel", RecruitmentRouteNames.BulkDeclineCandidates, new {vacancyReferenceNumber = @Model.VacancyReferenceNumber})
+                @Html.RouteLink("Cancel", RecruitmentRouteNames.BulkDeclineCandidates, new { vacancyReferenceNumber = @Model.VacancyReferenceNumber })
             </div>
         </section>
     </div>
