ra-318: Change Cancel action.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyStatus/BulkDeclineCandidates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyStatus/BulkDeclineCandidates.cshtml
@@ -207,7 +207,7 @@
     </table>
     <div class="form-group">
         <button type="submit" class="button">Confirm and continue</button>        
-        <a id="dashboardLink" href="@Url.RouteUrl(RecruitmentRouteNames.PreviewVacancy, new {vacancyReferenceNumber = Model.VacancyReferenceNumber})">Cancel</a>
+        <a id="dashboardLink" href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new {vacancyReferenceNumber = Model.VacancyReferenceNumber})">Cancel</a>
     </div>
     <div class="page-navigation">
 
