--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyStatus/Archive.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyStatus/Archive.cshtml
@@ -9,8 +9,7 @@
 {
     <h1 id="heading" class="heading-xlarge">Are you ready to archive this vacancy?</h1>
     <p>
-        If all the positions have been filled this vacancy cab be archived, once a reposnse has been
-        sent to all candidates currently set as 'In-progess' or 'New'.</p>
+        You can only archive this vacancy once all positions have been filled and responses sent to all candidates.</p>
         <a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidates, new {vacancyReferenceNumber = Model.VacancyReferenceNumber})" class="button">Respond to remaining candidates</a>
         <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new {vacancyReferenceNumber = Model.VacancyReferenceNumber})">Return to applications</a>
 }
