ra-317: Fix url on view application. Should be vacancy id and not vacancy reference number and use employer fullname.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/VacancyHeader.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/VacancyHeader.cshtml
@@ -4,7 +4,7 @@
     <div class="grid grid-2-3">
         <div class="hgroup text">
             <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">@Model.Vacancy.NewVacancyViewModel.Title</h1>
-            <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.Vacancy.NewVacancyViewModel.VacancyOwnerRelationship.Employer.Name</p>
+            <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.Vacancy.NewVacancyViewModel.VacancyOwnerRelationship.Employer.FullName</p>
         </div>
     </div>
     <div class="grid grid-1-3">
