--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -84,10 +84,33 @@
                     </div>
                     <div id="custom-wage-panel" class="toggle-content blocklabel-content">
                         <fieldset class="form-group inline-fixed">
-                            £
-                            @Html.FormTextFor(m => m.Wage.Amount, containerHtmlAttributes: new {@class = "form-group-compound"}, labelHtmlAttributes: new {style = "Display: none"}, controlHtmlAttributes: new {@class = "form-control-large", type = "tel", size = 12})
-                            @Html.DropDownListFor(m => m.Wage.Unit, Model.WageUnits)
+                            @* ReSharper disable once Html.IdNotResolved *@
+                            <label for="custom-wage-fixed" class="block-label" data-target="custom-wage-fixed-panel">
+                                @Html.RadioButtonFor(model => model.Wage.CustomType, WageType.Custom, new {id = "custom-wage-fixed", aria_controls = "custom-wage-panel"})
+                                Fixed wage
+                            </label>
+                            @* ReSharper disable once Html.IdNotResolved *@
+                            <label for="custom-wage-range" class="block-label" data-target="custom-wage-range-panel">
+                                @Html.RadioButtonFor(model => model.Wage.CustomType, WageType.CustomRange, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
+                                Wage range
+                            </label>
                         </fieldset>
+                        <div id="custom-wage-fixed-panel" class="toggle-content blocklabel-content">
+                            <fieldset class="form-group inline-fixed">
+                                £
+                                @Html.FormTextFor(m => m.Wage.Amount, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                                @Html.DropDownListFor(m => m.Wage.Unit, Model.WageUnits)
+                            </fieldset>
+                        </div>
+                        <div id="custom-wage-range-panel" class="toggle-content blocklabel-content">
+                            <fieldset class="form-group inline-fixed">
+                                £
+                                @Html.FormTextFor(m => m.Wage.AmountLowerBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                                &nbsp;to&nbsp;
+                                @Html.FormTextFor(m => m.Wage.AmountUpperBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                                @Html.DropDownListFor(m => m.Wage.RangeUnit, Model.WageUnits)
+                            </fieldset>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">@Html.EditorFor(m => m.WageComment, "Comment", Html.GetLabelFor(m => m.WageComment))</div>
