ra-318: Show validation of candidates are not selected. Also code cleanup.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyStatus/BulkDeclineCandidates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyStatus/BulkDeclineCandidates.cshtml
@@ -7,6 +7,7 @@
 @{
     ViewBag.Title = "Recruit an Apprentice - Bulk decline candidates";
 }
+@Html.Partial("ValidationSummary", ViewData.ModelState)
 @using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmBulkDeclineCandidates, FormMethod.Post))
 {    
     <div class="grid-wrapper">
