--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.FurtherVacancyDetailsViewModel
 @using SFA.Apprenticeships.Domain.Entities.Raa.Vacancies
 @using SFA.Apprenticeships.Domain.Entities.Vacancies
+@using SFA.Apprenticeships.Web.Common.Constants.ViewModels
 @using SFA.Apprenticeships.Web.Common.Extensions
 @using SFA.Apprenticeships.Web.Common.Validators.Extensions
 @using SFA.Apprenticeships.Web.Raa.Common.Constants.ViewModels
@@ -80,6 +81,11 @@
                             @Html.RadioButtonFor(model => model.Wage.Type, WageType.ApprenticeshipMinimum, new {id = "apprenticeship-minimum-wage", aria_controls = "wage-type-panel"})
                             National Minimum Wage for apprentices
                         </label>
+                        @* ReSharper disable once Html.IdNotResolved *@
+                        <label for="preset-text" class="block-label" data-target="preset-text-panel">
+                            @Html.RadioButtonFor(model => model.Wage.Type, WageType.LegacyText, new { id = "preset-text", aria_controls = "wage-type-panel" })
+                            Choose a text description of the wage
+                        </label>
                         @Html.ValidationMessageFor(m => m.Wage.Type)
                     </div>
                     <div id="custom-wage-panel" class="toggle-content blocklabel-content">
@@ -111,6 +117,14 @@
                                 @Html.DropDownListFor(m => m.Wage.RangeUnit, Model.WageUnits)
                             </fieldset>
                         </div>
+                    </div>
+                    <div id="preset-text-panel" class="toggle-content blocklabel-content">
+                        <fieldset class="form-group inline-fixed">
+                            @Html.DropDownListFor(m => m.Wage.PresetText, Model.WageTextPresets)
+                        </fieldset>
+                        <fieldset class="form-group inline-fixed">
+                            @Html.FormTextAreaFor(m => m.Wage.WageTypeReason, WageViewModelMessages.WageTypeReason.LabelText, containerHtmlAttributes: new {@baseClassName = "form-group-compound" }, controlHtmlAttributes: new {@class = "width-all-1-1", type = "text", size = 12, data_val_length = WageViewModelMessages.WageTypeReason.TooLongErrorText, data_val_regex = Whitelists.FreetextWhitelist.RegularExpression })
+                        </fieldset>
                     </div>
                 </div>
                 <div class="form-group">@Html.EditorFor(m => m.WageComment, "Comment", Html.GetLabelFor(m => m.WageComment))</div>
