--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -137,3 +137,7 @@ input[type="search"]::-webkit-search-decoration {
  .grey-background {
      background: #F8F8F8;
  }
+
+  .bulk-response li {
+    padding: 0 10px 0 0;
+    width: 50%; } 
