--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main-ie8.css
@@ -2666,6 +2666,10 @@ input[type="search"]::-webkit-search-decoration {
 .grey-background {
   background: #F8F8F8; }
 
+.bulk-response li {
+  padding: 0 10px 0 0;
+  width: 50%; }
+
 html {
   font-size: 62.5%;
   /* 1 */ }
