ra-318: Fix styling,

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -138,6 +138,5 @@ input[type="search"]::-webkit-search-decoration {
      background: #F8F8F8;
  }
 
-  .bulk-response li {
-    padding: 0 10px 0 0;
+  .application-summary .bulk-response li{    
     width: 50%; } 
