--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -2666,8 +2666,7 @@ input[type="search"]::-webkit-search-decoration {
 .grey-background {
   background: #F8F8F8; }
 
-.bulk-response li {
-  padding: 0 10px 0 0;
+.application-summary .bulk-response li {
   width: 50%; }
 
 html {
