--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -138,5 +138,6 @@ input[type="search"]::-webkit-search-decoration {
      background: #F8F8F8;
  }
 
-  .application-summary .bulk-response li{    
-    width: 50%; } 
+ ul.applications-summary.bulk-response{
+     width:200%
+ }
