--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -2666,8 +2666,8 @@ input[type="search"]::-webkit-search-decoration {
 .grey-background {
   background: #F8F8F8; }
 
-.application-summary .bulk-response li {
-  width: 50%; }
+ul.applications-summary.bulk-response {
+  width: 200%; }
 
 html {
   font-size: 62.5%;
